P4/opponent_bots/defensive_bot.log
ERROR:root:Error in bot.
Traceback (most recent call last):
  File "opponent_bots/defensive_bot.py", line 91, in <module>
    current_line = input()
  File "<string>", line 1
    P 11.743986 11.083297 0 25 1
              ^
SyntaxError: invalid syntax
